cargo_check_phase3_v2.txt
    Checking machine v0.1.0 (/home/feroan/Projects/theMachine/machine)
error[E0428]: the name `snapshot` is defined multiple times
  --> src/commands/mod.rs:27:1
   |
16 | pub mod snapshot;
   | ----------------- previous definition of the module `snapshot` here
...
27 | pub mod snapshot;
   | ^^^^^^^^^^^^^^^^^ `snapshot` redefined here
   |
   = note: `snapshot` must be defined only once in the type namespace of this module

For more information about this error, try `rustc --explain E0428`.
error: could not compile `machine` (lib) due to 1 previous error
